Fix irregular spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -763,6 +763,15 @@ table.shortcut-tables-cursor-icons td:nth-child(3) {
   text-align: center !important;
 }
 
+/* Optional: Table with everything centred */
+.table-center th,
+.table-center td {
+  text-align: center;
+}
+
+
+
+
 .tooltip-wrapper {
   position: relative;
   display: block;
